fixed edit course route, refactored "coursemanagement" route to "courses", added pointer cursor to course management list items, set overflow-y of the omoumain component to be auto instead of scroll, added edit course navigation highlight logic

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -66,7 +66,7 @@ body{
     padding: 3% 3% 5% 3%;
     height: 96vh;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     background-color: #FFFFFF;
     box-shadow: -2px 0px 5px #C1C1C1;
   }
